--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_carrerasmatricula.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_carrerasmatricula.html.twig
@@ -13,7 +13,7 @@
             </div>-->
             <!-- .panel-heading -->
             <div class="panel-body">
-                      <h2 align="center"><b>Carreras en Proceso de Matriculacion</b></h2>
+                      <h2 align="center"><b>Carreras en Proceso de Matriculación</b></h2>
               <div class="panel-group" id="accordion">
                 
                   
