--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
@@ -11,7 +11,7 @@
                   </div> -->
              </a>
               <a href="{{path('estudiantes_anulacion')}}" class="tip btn btn-danger btn-circle btn-xl">
-                <span>Anulacion de Materias</span><i class='fa fa-eraser' title="Anlación"></i>
+                <span>Anulación de Materias</span><i class='fa fa-eraser' title="Anlación"></i>
                  <!--  <div class='btn btn-danger btn-circle btn-xl ' >
                         <i class='fa fa-list' title="Anlación"></i>
                   </div> -->
